<resources>
    <string name="app_name">MunkkisTracker</string>
    <string name="nappi1">Syötä tiedot</string>
    <string name="nappi2">Päiväkirja</string>
    <string name="nappi3">Hall Of Fame</string>
    <string name="b_syötä_tallenna">Tallenna</string>
    <string name="rb_berlin">Berliininmunkki</string>
    <string name="rb_hillo">Hillomunkki</string>
    <string name="rb_rinkila">Munkkirinkilä</string>
    <string name="title">MunkkiTracker</string>
    <string name="nappi_tekijat">Tekijät</string>
    <string name="Button_testi">Testinappula</string>
</resources>