<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CD6D55"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_syota_tiedot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:backgroundTint="#BAA061"
        android:text="@string/nappi1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <Button
        android:id="@+id/button_paivaskirja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#BAA061"
        android:text="@string/nappi2"
        app:layout_constraintBottom_toTopOf="@+id/button_halloffame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_syota_tiedot" />

    <Button
        android:id="@+id/button_halloffame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="248dp"
        android:backgroundTint="#BAA061"
        android:text="@string/nappi3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="367dp"
        android:layout_height="64dp"
        android:layout_marginTop="76dp"
        android:background="#BAA061"
        android:fontFamily="@font/fascinate_inline"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>